# neurotrust-eeg

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: baseline.yaml
scripts/: build_index.py  check_environment.py  download_chbmit.py  inspect_splits.py
src/neurotrust_eeg/: channels.py  config.py  data.py  metrics.py  models.py  utils.py
tests/: test_data.py  test_metrics.py  test_models.py  test_project_setup.py
